# confesi-backend

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  GeoLite2-City.mmdb  README.md  compose.yaml  docker-compose.yml  index.js  package-lock.json  package.json  requests.rest  rustfmt.toml
.cargo/: config.toml
config/constants/: auth.js  feed.js  general.js  profile.js
constants/: setup.js
controllers/: authController.js  postsController.js  profileController.js  searchController.js
custom_validation/: register.js
docs/: .dockerignore  Dockerfile  openapi.yaml
lib/auth/: authenticateToken.js  generateAccessToken.js  generateJWTAndSaveToDB.js  getTokenFromAuthHeader.js  getUserIDFromAccessToken.js
middlewares/: authenticateToken.js
models/: Comment.js  Post.js  RefreshToken.js  SavedPost.js  University.js  User.js  Vote.js
routes/: auth.js  posts.js  profile.js  search.js
src/: api_types.rs  auth.rs  base64_serde.rs  conf.rs  main.rs  masked_oid.rs  middleware.rs  types.rs
src/base64_serde/: mod.rs  tests.rs
src/services/: auth.rs  comments.rs  email.rs  feedback.rs  mod.rs  posts.rs  profile.rs  reports.rs  saved.rs
src/util/: hash.rs
src/utils/: content_scoring.rs  mod.rs
utils/auth/: decryptUserIDFromToken.js  generateAccessToken.js  generateJWTAndSaveToDB.js  getTokenFromAuthHeader.js
utils/feed/: rank.js
utils/validation/: register.js
validation/: login.js  register.js
