[package]
publish = false
name = 'confesi-server'
version = '0.1.0'
edition = '2021'

[dependencies]
actix-cors = '^0.6.1'
actix-web = { version = '^4.1.0', default-features = false, features = ['macros', 'rustls'] }
aes = { version = '^0.8.1' }
base64 = '^0.13.0'
blake2 = '^0.10.4'
env_logger = '^0.9.0'
futures = '^0.3.21'
hex = '^0.4.3'
log = '^0.4.17'
maxminddb = '^0.23.0'
memmap = '^0.7.0'
mongodb = '^2.2.2'
rand = { version = '^0.8.5', features = ['log'] }
ring = { version = '^0.16.0', default-features = false, features = ['std'] }
serde = { version = '^1.0.139', features = ['derive'] }
serde_json = '^1.0.82'
serde_with = '^1.14.0'
bcrypt = '^0.14.0'
